--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Page Not Found
+title: Nix gefunden
 description: Sorry – the page you're looking for doesn't exist.
 featured_image: /images/demo/home.jpg
 ---
@@ -9,10 +9,9 @@ featured_image: /images/demo/home.jpg
 
 	<div class="wrap">
 
-		<h1>Page not found.</h1>
-		<p>Sorry – the page you're looking for doesn't exist.</p>
-		<p>Perhaps you typed the URL incorrectly, or it may have moved.</p>
-		<p><a href="/" class="button button--large">Back To Home</a></p>
+		<h1>Nix g'funden!</h1>
+		<p>Welche Adresse auch immer Sie aufgerufen haben, auf dieser Webseite gibt es sie nicht (mehr). Entweder Sie haben sich verschrieben oder die Seite wurde mittlerweile entfernt, was bei mir durchaus möglich wäre.</p>
+		<p>--&gt; <a href="/" class="button button--large">Ab nach Hause</a></p>
 
 	</div>
 
