--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: nils-prause.de
+title: Startseite
 description: Private Webseite von Nils Prause aus Lotte, Osnabrück und Münster mit Inhalten zu E-Government, Amateurfunk, Accessibility, Barrierefreiheit und mehr.
 featured_image: /images/social.jpg
 ---
