--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ featured_image: /images/demo/home.jpg
 
 		<h1>Nix g'funden!</h1>
 		<p>Welche Adresse auch immer Sie aufgerufen haben, auf dieser Webseite gibt es sie nicht (mehr). Entweder Sie haben sich verschrieben oder die Seite wurde mittlerweile entfernt, was bei mir durchaus möglich wäre.</p>
-		<p>--&gt; <a href="/" class="button button--large">Ab nach Hause</a></p>
+		<p>--&gt; <a href="/index.html" class="button button--large">Ab nach Hause</a></p>
 
 	</div>
 
