--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,18 @@ description: Simples is a super simple blogging theme for Jekyll.
 featured_image: /images/social.jpg
 ---
 
+<section class="single">
+
+	<div class="wrap">
+
+		<h1>Projekte</h1>
+
+		<p>Hin und wieder arbeite ich an einigen Projekten im Web mit, die ich hier kurz vorstellen möchte.</p>
+		
+	</div>
+
+</section>
+
 <section class="listing single">
 
 	<div class="wrap">
