--- a/notices/index.html
+++ b/notices/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Projects
-description: Simples is a super simple blogging theme for Jekyll.
-featured_image: /images/social.jpg
+title: Pinnwand
+description: Sammlung diverser Blog-Beiträge von Nils Prause.
 ---
 
 <section class="single">
@@ -26,17 +25,17 @@ featured_image: /images/social.jpg
 		<article class="listing-post">
 
 			<div class="listing-post__header">
-				<h2 class="listing-post__title"><a href="{{ project.url | relative_url }}">{{ project.title }}</a></h2>
-				<p class="listing-post__subtitle">{{ project.subtitle }}</p>
+				<h2 class="listing-post__title"><a href="{{ notices.url | relative_url }}">{{ notices.title }}</a></h2>
+				<p class="listing-post__subtitle">{{ notices.subtitle }}</p>
 			</div>
 
-			{% if project.featured_image %}
-			<a href="{{ project.url | relative_url }}" class="listing-post__image" style="background-image: url({{ project.featured_image | relative_url }});"></a>
+			{% if notices.featured_image %}
+			<a href="{{ notices.url | relative_url }}" class="listing-post__image" style="background-image: url({{ notices.featured_image | relative_url }});"></a>
 			{% endif %}
 
 			<div class="listing-post__content">
-				<p>{{ project.excerpt }}</p>
-				<p><a href="{{ project.url | relative_url }}" class="button">Ich will mehr!</a>
+				<p>{{ notices.excerpt }}</p>
+				<p><a href="{{ notices.url | relative_url }}" class="button">Ich will mehr!</a>
 			</div>
 
 		</article>
