--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Projects
-description: Simples is a super simple blogging theme for Jekyll.
-featured_image: /images/social.jpg
+title: Projekte
+description: Übersicht der Projekte im Web von und mit Nils Prause.
 ---
 
 <section class="single">
