--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@ description: Übersicht der Projekte im Web von und mit Nils Prause.
 
 			<div class="listing-post__content">
 				<p>{{ project.excerpt }}</p>
-				<p><a href="{{ project.url | relative_url }}" class="button">View Project</a>
+				<p><a href="{{ project.url | relative_url }}" class="button">Mehr davon</a>
 			</div>
 
 		</article>
