--- a/notices/index.html
+++ b/notices/index.html
@@ -20,7 +20,7 @@ description: Sammlung diverser Blog-Beiträge von Nils Prause.
 
 	<div class="wrap">
 
-		{% for project in site.projects reversed %}
+		{% for notices in site.notices reversed %}
 
 		<article class="listing-post">
 
